@@ -7,11 +7,8 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import de.uka.ilkd.key.rule.Rule;
-import de.uka.ilkd.key.util.Quadruple;
-import de.uka.ilkd.key.util.Triple;
 
 /**
  * Simple data object to store a mapping of rules to various counters.
@@ -24,7 +21,7 @@ public class RuleStatistics {
      * that used this rule and didn't contribute to the proof ("useless" proof steps), and the
      * number of "useless" proof steps that initiate a chain of further (useless) proof steps.
      */
-    private final Map<String, Triple<Integer, Integer, Integer>> map = new HashMap<>();
+    private final Map<String, RuleStatisticData> map = new HashMap<>();
     /**
      * Mapping of rule name to whether this rule introduces new proof branches.
      */
@@ -40,9 +37,8 @@ public class RuleStatistics {
         String name = rule.displayName();
         ruleBranched.put(name, branches);
 
-        Triple<Integer, Integer, Integer> entry =
-            map.computeIfAbsent(name, it -> new Triple<>(0, 0, 0));
-        map.put(name, new Triple<>(entry.first + 1, entry.second, entry.third));
+        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(it, 0, 0, 0));
+        map.put(name, new RuleStatisticData(name, entry.first + 1, entry.second, entry.third));
     }
 
     /**
@@ -55,9 +51,8 @@ public class RuleStatistics {
         String name = rule.displayName();
         ruleBranched.put(name, branches);
 
-        Triple<Integer, Integer, Integer> entry =
-            map.computeIfAbsent(name, it -> new Triple<>(0, 0, 0));
-        map.put(name, new Triple<>(entry.first + 1, entry.second + 1, entry.third));
+        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(it, 0, 0, 0));
+        map.put(name, new RuleStatisticData(name, entry.first + 1, entry.second + 1, entry.third));
     }
 
     /**
@@ -70,9 +65,9 @@ public class RuleStatistics {
         String name = rule.displayName();
         ruleBranched.put(name, branches);
 
-        Triple<Integer, Integer, Integer> entry =
-            map.computeIfAbsent(name, it -> new Triple<>(0, 0, 0));
-        map.put(name, new Triple<>(entry.first + 1, entry.second + 1, entry.third + 1));
+        var entry = map.computeIfAbsent(name, it -> new RuleStatisticData(it, 0, 0, 0));
+        map.put(name,
+            new RuleStatisticData(name, entry.first + 1, entry.second + 1, entry.third + 1));
     }
 
     /**
@@ -83,13 +78,10 @@ public class RuleStatistics {
      * @param comparator custom comparator
      * @return list of rule names + counters
      */
-    public List<Quadruple<String, Integer, Integer, Integer>> sortBy(
-            Comparator<Quadruple<String, Integer, Integer, Integer>> comparator) {
-        return map.entrySet().stream()
-                .map(entry -> new Quadruple<>(entry.getKey(), entry.getValue().first,
-                    entry.getValue().second, entry.getValue().third))
+    public List<RuleStatisticData> sortBy(Comparator<? super RuleStatisticData> comparator) {
+        return map.values().stream()
                 .sorted(comparator)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -98,5 +90,8 @@ public class RuleStatistics {
      */
     public boolean branches(String rule) {
         return ruleBranched.get(rule);
+    }
+
+    public record RuleStatisticData(String ruleName, int first, int second, int third) {
     }
 }
